--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
     
     <Button
         android:id="@+id/start_button"
-        android:layout_width="wrap_content"
+        android:layout_width="150dip"
         android:layout_height="wrap_content"
         android:layout_below="@id/main_title_text"
         android:layout_centerHorizontal="true"
@@ -37,7 +37,7 @@
         android:text="Start" />   
     <Button
         android:id="@+id/easymode_button"
-        android:layout_width="wrap_content"
+        android:layout_width="150dip"
         android:layout_height="wrap_content"
         android:layout_below="@id/start_button"
         android:layout_centerHorizontal="true"
@@ -45,7 +45,7 @@
         android:text="Easy Mode" />   
     <Button
         android:id="@+id/ranking_button"
-        android:layout_width="wrap_content"
+        android:layout_width="150dip"
         android:layout_height="wrap_content"
         android:layout_below="@id/easymode_button"
         android:layout_centerHorizontal="true"
@@ -53,7 +53,7 @@
         android:text="Ranking" />
     <Button
         android:id="@+id/help_button"
-        android:layout_width="wrap_content"
+        android:layout_width="150dip"
         android:layout_height="wrap_content"
         android:layout_below="@id/ranking_button"
         android:layout_centerHorizontal="true"
@@ -62,7 +62,7 @@
                                
     <Button
         android:id="@+id/setting_button"
-        android:layout_width="wrap_content"
+        android:layout_width="150dip"
         android:layout_height="wrap_content"
         android:layout_below="@id/help_button"
         android:layout_centerHorizontal="true"
