--- a/res/layout/main_game.xml
+++ b/res/layout/main_game.xml
@@ -350,85 +350,104 @@
         android:id="@+id/calculaation1_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="20dip"
-        android:layout_below="@id/number_box6_layout" >
+        android:layout_below="@id/number_box6_layout"
+        android:background="@android:color/darker_gray"
+        android:padding="10dip" >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="30dip"
+            android:background="@android:color/black"
+            android:paddingLeft="20dip"
+            android:paddingRight="5dip"
             android:text="4"
             android:textSize="40dip" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="30dip"
+            android:paddingLeft="20dip"
+            android:paddingRight="5dip"
             android:text="-"
             android:textSize="40dip" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="30dip"
+            android:background="@android:color/black"
+            android:paddingLeft="20dip"
+            android:paddingRight="5dip"
             android:text="0"
             android:textSize="40dip" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="30dip"
+            android:paddingLeft="20dip"
+            android:paddingRight="5dip"
             android:text="="
             android:textSize="40dip" />
-        
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="30dip"
+            android:background="@android:color/black"
+            android:paddingLeft="20dip"
+            android:paddingRight="5dip"
             android:text="-3"
-            android:textSize="40dip" />         
+            android:textSize="40dip" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/calculaation2_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dip"
-        android:layout_below="@id/calculaation1_layout" >
-        
+        android:layout_below="@id/calculaation1_layout"
+        android:background="@android:color/darker_gray"
+        android:padding="10dip" >
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="30dip"
+            android:background="@android:color/black"
+            android:paddingLeft="20dip"
+            android:paddingRight="5dip"
             android:text="4"
             android:textSize="40dip" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="30dip"
-            android:text="x"
+            android:paddingLeft="20dip"
+            android:paddingRight="5dip"
+            android:text="-"
             android:textSize="40dip" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="30dip"
+            android:background="@android:color/black"
+            android:paddingLeft="20dip"
+            android:paddingRight="5dip"
             android:text="0"
             android:textSize="40dip" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="30dip"
+            android:paddingLeft="20dip"
+            android:paddingRight="5dip"
             android:text="="
             android:textSize="40dip" />
-        
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="30dip"
-            android:text="28"
-            android:textSize="40dip" />          
-        
+            android:background="@android:color/black"
+            android:paddingLeft="20dip"
+            android:paddingRight="5dip"
+            android:text="-3"
+            android:textSize="40dip" />
     </LinearLayout>
 
 </RelativeLayout>
