git 파일 commit 테스트

--- a/res/layout/main_game.xml
+++ b/res/layout/main_game.xml
@@ -407,6 +407,7 @@
         android:padding="10dip" >
 
         <TextView
+            android:id="@+id/first_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/black"
@@ -424,6 +425,7 @@
             android:textSize="40dip" />
 
         <TextView
+            android:id="@+id/second_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/black"
